# buds

./: LICENSE  README.md  mkdocs.yml  profile_particles.py  pyproject.toml
buds/: __init__.py  archetype.py  base.py  inspect.py  itertools.py  seed.py  sparse.py  system.py
buds/extras/: __init__.py  numpy_archetype.py
buds/extras/msgspec/: __init__.py  inspect.py  msgspec.py  numpy.py  trait.py
buds/extras/numpy/: dtypes.py  numpy_archetype.py  views.py
buds/extras/pydantic/: __init__.py  inspect.py  numpy.py  trait.py
docs/: tutorial.md
docs/api/: base.md  core.md  inspect.md  itertools.md  seeds.md  system.md
docs/api/extras/: msgspec.md  numpy.md  pydantic.md
docs/api/worlds/: archetypes.md  sparse.md
docs/tutorials/: custom_trait.md
examples/: particles.py
tests/: conftest.py  test_archetype_world.py  test_entity_class.py  test_inspect.py  test_itertools.py  test_msgspec_traits.py  test_numpy_dtype_utils.py  test_numpy_view_builder.py  test_numpy_world.py  test_numpy_world_utils.py  test_seed.py  test_sparse_world.py  test_system.py  test_traits.py  world_contract.py
